--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div>__________________________________</div>
     <p></p>
 
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <button id="Rock">Rock</button>
+    <button id="Paper">Paper</button>
+    <button id="Scissors">Scissors</button>
 
     <script src="app.js"></script>
   </body>
